src/objects/Holdback__c.object
<CustomObject>
    <fields>
        <fullName>Amount__c</fullName>
        <label>Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Comp__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Comp</label>
        <referenceTo>Sale__c</referenceTo>
        <relationshipLabel>Holdbacks</relationshipLabel>
        <relationshipName>Holdbacks</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Marketing Budget</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Holdback</label>
    <nameField>
        <displayFormat>HB-{00000}</displayFormat>
        <label>Holdback ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Holdbacks</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>